--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
-          class="brand-logo grey-blue-text">
+          class="brand-logo grey-blue-text"> 
           <img src="/assets/img/myImg.png" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
@@ -123,7 +123,7 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hey, I'm <span class="teal">Aman Bilaiya.</span></h2>
+              <h2>Hey, I'm <span class="teal">Aman Bilaiya</span>&#128075;</h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#21b199"></span></h5>
               <h5>Passionate programmer with a curious mind who enjoys solving complex and challenging real-world problems.
                   Feeding Up My Curiosities :)
@@ -143,8 +143,8 @@
 
             </div>
             <div class='buttons'>
-              <a href="#about" class="readme">More</a>
-              <a href="#contact" class="contactme">Let's Connect</a>
+              <a href="#about" class="contactme">More</a> &nbsp; &nbsp;
+              <a href="#contact" class="contactme">Connect</a>
             </div>
           </div>
         </div>
@@ -153,7 +153,7 @@
 
     <!-- Second Section: About -->
     <section id="about" class="section scrollspy">
-      <h3 class="page-title white-text teal">About</h3>
+      <h3 class="page-title white-text">About</h3>
       <div class="container flow-text">
         <!-- <blockquote>
           <h2>
